apps/base/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-ui
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 32400
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: plex
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app.kubernetes.io/name: plex
  annotations:
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 32400
    targetPort: 32400
    protocol: TCP
  - name: dlna
    port: 1900
    targetPort: 1900
    protocol: UDP
  - name: bonjour
    port: 5353
    targetPort: 5353
    protocol: UDP
  - name: companion
    port: 8324
    targetPort: 8324
    protocol: TCP
  - name: gdm
    port: 32410
    targetPort: 32410
    protocol: UDP
  - name: gdm2
    port: 32412
    targetPort: 32412
    protocol: UDP
  - name: gdm3
    port: 32413
    targetPort: 32413
    protocol: UDP
  - name: gdm4
    port: 32414
    targetPort: 32414
    protocol: UDP
  - name: dlna2
    port: 32469
    targetPort: 32469
    protocol: TCP
  selector:
    app.kubernetes.io/name: plex
