apps/base/plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: plex
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`plex.cruznet.io`)
    kind: Rule
    services:
    - name: plex
      kind: Service
      port: 32400
  tls:
    secretName: plex-cert
